[package]
name = "subset-bam"
version = "1.1.1"
edition = "2021"
authors = [
  "Ian Fiddes <ian.fiddes@10xgenomics.com>",
  "Wyatt McDonnell <wyatt.mcdonnell@10xgenomics.com>",
  "Ben Johnson <ben.johnson@vai.org>"
]

[dependencies]
# Argument parsing (matches the updated main.rs using clap v4)
clap = { version = "4.5", features = ["cargo"] }

# HTS
rust-htslib = { version = "0.46", default-features = true }

# I/O and utilities
csv = "1.3"
data-encoding = "2.5"
terminal_size = "0.3"
tempfile = "3.10"
faccess = "0.2"

# Logging
log = "0.4"
simplelog = "0.12"

# Parallelism
rayon = "1.10"

# Error handling (legacy, retained for minimal code churn)
failure = "0.1"

# Friendly panic messages
human-panic = "1.2"

[dev-dependencies]
# Only needed for tests; avoids compiling ring during normal `cargo build`
ring = "0.17"

[profile.release]
debug = 1
lto = true
codegen-units = 1
